Fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ p {
     width:80vw;
     max-width: 900px;
     max-height: 900px;
-    min-height: 800px;
+    min-height: 785px;
     min-width: 700px;
     background-color: #2c3e50;
     border-radius: 5px;
